# stracker

./: README.md  asap_aim.ipynb  asap_aimback.ipynb  cifar.ipynb  cifarback.ipynb  conver_old_to_new.py  experiment.py  log.py  pyproject.toml  query_configs.py  test_exp_add.txt  tmp.py  util.py
results/: cifar-olrandom-hash.yaml  cifar-olrandom-hashes.yaml  cifar-olrandom-metrics.yaml
src/stracker/: __init__.py  ana.py  asset.py  exp.py  experiment.py  logger.py  metric.py  pro.py  project.py  repo.py  run.py  utils.py
test/: test.py  test_aim.py
